# pando

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  tsconfig.json
build_defs/go_service/: defs.bzl
build_defs/go_service/pandomium/template/: main.go
build_defs/service_contract/: defs.bzl
generators/: BUILD.bazel  defs.bzl  go_service.ts
proto/services/recipe/: BUILD.bazel  recipe_service.proto
services/recipe/: BUILD.bazel  service.go
