load("@bazel_gazelle//:def.bzl", "gazelle")

exports_files(["tsconfig.json", "package.json", "yarn.lock"])

# gazelle:prefix github.com/shawntabai/pando
# gazelle:proto package
gazelle(name = "gazelle")

gazelle(
    name = "update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
