load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build_defs/go_service:defs.bzl", "go_pandomium_service")

go_pandomium_service(
  name = "recipe",
  full_service_name = "shawntabai.pando.service.recipe.RecipeService",
  contract = "//proto/services/recipe:recipe_service_proto",
  go_contract = "//proto/services/recipe:recipe_service_go_proto",
  srcs = ["service.go"],
  deps = [
      "//proto/services/recipe:recipe_service_go_proto",
      "@org_golang_google_grpc//:go_default_library",
  ],
  importpath = "github.com/shawntabai/pando/services/recipe",
)
