load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@npm//@bazel/labs:index.bzl", "ts_proto_library")

proto_library(
    name = "recipe_service_proto",
    srcs = ["recipe_service.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "recipe_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/shawntabai/pando/proto/services/recipe",
    proto = ":recipe_service_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "recipe_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/shawntabai/pando/proto/services/recipe",
    proto = ":recipe_service_proto",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "recipe_service_ts_proto",
    proto = ":recipe_service_proto",
    visibility = ["//visibility:public"],
)
